// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Icon /> Spec Snapshots should render with defaults 1`] = `
.c0 {
  width: 16px;
  height: 16px;
  display: flex;
  align-items: center;
  justify-content: center;
}

<div>
  <div
    class="c0"
  >
    <div
      color="#bbbdbf"
      height="16"
      name="Checkmark"
      preserveaspectratio="none"
      width="16"
    />
  </div>
</div>
`;

exports[`<Icon /> Spec Snapshots should support different colors 1`] = `
.c0 {
  width: 16px;
  height: 16px;
  display: flex;
  align-items: center;
  justify-content: center;
}

<div>
  <div
    class="c0"
  >
    <div
      color="#367fee"
      height="16"
      name="Checkmark"
      preserveaspectratio="none"
      width="16"
    />
  </div>
</div>
`;

exports[`<Icon /> Spec Snapshots should support different sizes 1`] = `
.c0 {
  width: 32px;
  height: 32px;
  display: flex;
  align-items: center;
  justify-content: center;
}

<div>
  <div
    class="c0"
  >
    <div
      color="#bbbdbf"
      height="32"
      name="Checkmark"
      preserveaspectratio="none"
      width="32"
    />
  </div>
</div>
`;
